--- a/html/student-invoice.html
+++ b/html/student-invoice.html
@@ -32,19 +32,13 @@
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.13.6/datatables.min.css">
-  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" /> -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
     <!-- Page CSS -->
 
     <!-- Helpers -->
     <script src="../assets/vendor/js/helpers.js"></script>
-    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="../assets/js/config.js"></script>
 </head>
 
@@ -132,7 +126,7 @@
                             </li>
                             <li class="menu-item ">
                                 <a href="user-access.html" class="menu-link">
-                                   <div data-i18n="Text Divider">Users Access Role</div>
+                                    <div data-i18n="Text Divider">Users Access Role</div>
                                 </a>
                             </li>
 
@@ -146,7 +140,6 @@
             <!-- Layout container -->
             <div class="layout-page">
                 <!-- Navbar -->
-
                 <nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
                     id="layout-navbar">
                     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
@@ -156,7 +149,6 @@
                     </div>
 
                     <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
-                        <!-- Search -->
                         <div class="navbar-nav align-items-center">
                             <div class="nav-item d-flex align-items-center">
                                 <i class="bx bx-search fs-4 lh-0"></i>
@@ -164,17 +156,7 @@
                                     value="Search..." aria-label="Search..." />
                             </div>
                         </div>
-                        <!-- /Search -->
-
                         <ul class="navbar-nav flex-row align-items-center ms-auto">
-                            <!-- Place this tag where you want the button to render. -->
-                            <!-- <li class="nav-item lh-1 me-3">
-                <a class="github-button" href="https://github.com/themeselection/sneat-html-admin-template-free"
-                  data-icon="octicon-star" data-size="large" data-show-count="true"
-                  aria-label="Star themeselection/sneat-html-admin-template-free on GitHub">Star</a>
-              </li> -->
-
-                            <!-- User -->
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
                                     data-bs-toggle="dropdown">
@@ -235,20 +217,13 @@
                                     </li>
                                 </ul>
                             </li>
-                            <!--/ User -->
                         </ul>
                     </div>
                 </nav>
 
-                <!-- / Navbar -->
-
                 <!-- Content wrapper -->
                 <div class="content-wrapper px-lg-3 px-0">
-                    <!-- Content -->
-
-
                     <div class="container-xxl flex-grow-1 container-p-y">
-
                         <div class="card  pb-4 px-lg-4 px-2">
                             <div class="d-flex justify-content-between align-items-center mt-2 mb-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  ">Students Invoices</h5>
@@ -256,64 +231,61 @@
                                     data-bs-target="#add-invoice">Add Invoice</button>
                             </div>
 
-<div class="table-responsive">
-    
-    <table id="inprogress" class="table  nowrap border-0 " style="width:100%">
-        <thead>
+                            <div class="table-responsive">
 
-            <tr class="dt-head">
-                <th style="text-align:center; display: flex;">#</th>
-                <th style="text-align:center; "> Invoice # </th>
-                <th style="text-align:center; "> Invoice Date </th>
-                <th style="text-align:center; "> Student Name </th>
-                <th style="text-align:center; "> Contact # </th>
-                <th style="text-align:center; "> Currency </th>
-                <th style="text-align:center; "> Fees </th>
-                <th style="text-align:center; "> Discount </th>
-                <th style="text-align:center; "> Payment Paid </th>
-                <th style="text-align:center; "> Payment remaining </th>
-                <th style="text-align:center; "> Actions </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td class="text-center d-flex">1</td>
+                                <table id="inprogress" class="table  nowrap border-0 " style="width:100%">
+                                    <thead>
 
-
-                <td class="text-center"> 100</td>
-
-                <td class="text-center"> 2023-12-07</td>
-                <td class="text-center">
-                    TALHA MEMON </td>
-
-                <td class="text-center"> 03471257976 </td>
-                <td class="text-center"> EURO</td>
-                <td class="text-center"> 4</td>
-                <td class="text-center"> 10</td>
-                <td class="text-center"> 6356</td>
-
-                <td class="text-center"> -6366</td>
+                                        <tr class="dt-head">
+                                            <th style="text-align:center; display: flex;">#</th>
+                                            <th style="text-align:center; "> Invoice # </th>
+                                            <th style="text-align:center; "> Invoice Date </th>
+                                            <th style="text-align:center; "> Student Name </th>
+                                            <th style="text-align:center; "> Contact # </th>
+                                            <th style="text-align:center; "> Currency </th>
+                                            <th style="text-align:center; "> Fees </th>
+                                            <th style="text-align:center; "> Discount </th>
+                                            <th style="text-align:center; "> Payment Paid </th>
+                                            <th style="text-align:center; "> Payment remaining </th>
+                                            <th style="text-align:center; "> Actions </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td class="text-center d-flex">1</td>
 
 
+                                            <td class="text-center"> 100</td>
 
-                <td class="text-center">
-                    <button type="button" class="btn btn-primary btn-xs" data-bs-toggle="modal"
-                        data-bs-target="#edit-invoice">Edit</button>
+                                            <td class="text-center"> 2023-12-07</td>
+                                            <td class="text-center">
+                                                TALHA MEMON </td>
 
-                    <button type="button" class="btn btn-primary btn-xs">Pdf/Print</button>
-                    <button type="button" class="btn btn-danger btn-xs" data-bs-toggle="modal"
-                        data-bs-target="#delete">Delete</button>
-                </td>
-            </tr>
+                                            <td class="text-center"> 03471257976 </td>
+                                            <td class="text-center"> EURO</td>
+                                            <td class="text-center"> 4</td>
+                                            <td class="text-center"> 10</td>
+                                            <td class="text-center"> 6356</td>
+
+                                            <td class="text-center"> -6366</td>
 
 
-        </tbody>
-    </table>
-</div>
+
+                                            <td class="text-center">
+                                                <button type="button" class="btn btn-primary btn-xs"
+                                                    data-bs-toggle="modal" data-bs-target="#edit-invoice">Edit</button>
+
+                                                <button type="button" class="btn btn-primary btn-xs">Pdf/Print</button>
+                                                <button type="button" class="btn btn-danger btn-xs"
+                                                    data-bs-toggle="modal" data-bs-target="#delete">Delete</button>
+                                            </td>
+                                        </tr>
+
+
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
-
-
-                        <!-- Footer -->
                         <footer class="content-footer footer bg-footer-theme">
                             <div
                                 class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
@@ -329,16 +301,12 @@
 
                             </div>
                         </footer>
-
-                        <!-- / Footer -->
-
                         <div class="content-backdrop fade"></div>
                     </div>
                     <!-- Content wrapper -->
                 </div>
                 <!-- / Layout page -->
             </div>
-
             <!-- Overlay -->
             <div class="layout-overlay layout-menu-toggle"></div>
         </div>
@@ -640,7 +608,7 @@
             </div>
         </div>
 
-        <!--view uni Modal -->
+        <!--edit invoice Modal -->
         <div class="modal fade" id="edit-invoice" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen modal-fullscreen2">
@@ -1201,46 +1169,16 @@
 
         <!-- Vendors JS -->
 
-        <!-- Main JS -->
         <script src="../assets/js/main.js"></script>
-
-        <!-- Page JS -->
-
-        <!-- Place this tag in your head or just before your close body tag. -->
         <script async defer src="https://buttons.github.io/buttons.js"></script>
-
         <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-        <!-- <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
-        <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
-        <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script> -->
         <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
         <script src="assets/Js/table.js"></script>
         <script>
 
             // new DataTable('#assign');
             $(document).ready(function () {
-
-                new DataTable('#assign', {
-                    language: {
-                        searchPlaceholder: "Search records"
-                    },
-                    responsive: true,
-                    "paging": false,
-                    "info": false
-                });
-
-                // new DataTable('#inquiry');
-                new DataTable('#inquiry', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
-                    responsive: true,
-                    "paging": false,
-                    "info": false
-                });
 
 
                 // new DataTable('#inprogress');
@@ -1253,122 +1191,12 @@
                     "info": false
                 });
 
-                // new DataTable('#inprogress');
-                new DataTable('#paidstudent', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
-                    responsive: true,
-                    "paging": false,
-                    "info": false
-                });
-
-                // new DataTable('#inprogress');
-                new DataTable('#t20', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
-                    responsive: true,
-                    "paging": false,
-                    "info": false
-                });
-
-
-                // new DataTable('#visaAccepted');
-                new DataTable('#visaAccepted', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
-                    responsive: true,
-                    "paging": false,
-                    "info": false
-                });
-
-                // new DataTable('#visaAccepted');
-                new DataTable('#visaRefused', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
-                    responsive: true,
-                    "paging": false,
-                    "info": false
-                });
-                // new DataTable('#close');
-                new DataTable('#closed', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
-                    responsive: true,
-                    "paging": false,
-                    "info": false
-                });
 
             });
 
         </script>
 
-        <script>
-            // function openCity(evt, cityName) {
-            //     var i, tabcontent, tablinks;
-            //     tabcontent = document.getElementsByClassName("tabcontent");
-            //     for (i = 0; i < tabcontent.length; i++) {
-            //         tabcontent[i].style.display = "none";
-            //     }
-            //     tablinks = document.getElementsByClassName("tablinks");
-            //     for (i = 0; i < tablinks.length; i++) {
-            //         tablinks[i].className = tablinks[i].className.replace(" active", "");
-            //     }
-            //     document.getElementById(cityName).style.display = "block";
-            //     evt.currentTarget.className += " active";
-            // }
-
-
-            // document.getElementById("defaultOpen").click();
-            $(document).ready(function () {
-                // Click event for tab buttons
-                $(".tablinks").click(function () {
-                    var tabName = $(this).data("tab");
-
-                    // Remove the "active" class from all tab buttons
-                    $(".tablinks").removeClass("active");
-
-                    // Hide all tab content
-                    $(".tabcontent").hide();
-
-                    // Show the selected tab content
-                    $("#" + tabName).show();
-
-                    // Add the "active" class to the clicked tab button
-                    $(this).addClass("active");
-                });
-
-                // Trigger the default tab to open
-                $("#defaultOpen").click();
-            });
-            document.getElementById("defaultOpen").click();
-        </script>
-        <script>
-            $("#edit").on("shown.bs.modal", function () {
-
-                $('.js-example-basic-multiple').select2();
-                console.log("popup")
-            })
-
-        </script>
-        <!-- add more commment -->
-        <script>
-            // jQuery document ready function
-            $(document).ready(function () {
-                // Add click event handler to add-more-make-btn button
-                $('.add-more-comment').on('click', function () {
-                    // Clone the template and append it to the add-more-make div
-                    var templateClone = $('#comment_template').html();
-                    $('.add-more-comment-div').append(templateClone);
-                });
-
-            });
-        </script>
-        <!-- add more uni -->
+        <!--add student  -->
         <script>
             // jQuery document ready function
             $(document).ready(function () {
@@ -1379,40 +1207,20 @@
                     $('.add-more-std').append(templateClone);
                 });
                 // Attach click event to .delete-uni
-
+                // $('.delete-std').on('click', function () {
+                // // Remove the parent .add-more-uni-row
+                // $(this).closest('.add-more-std-row').remove();
+                // });
             });
             // Attach click event to a parent element (e.g., closest static container)
             $(document).on('click', '.delete-std', function () {
                 // Remove the parent .add-more-std-row
                 $(this).closest('.add-more-std-row').remove();
             });
+
+
         </script>
 
-        <!-- add Uni view -->
-        <script>
-            // jQuery document ready function       
-            $(document).ready(function () {
-                // Add click event handler to add-more-make-btn button
-                $('.add-more-uni-view').on('click', function () {
-                    // Clone the template and append it to the add-more-make div
-                    var templateClone = $('#uni_view').html();
-                    $('.add-more-uniview-row').append(templateClone);
-
-
-                });
-                // Attach click event to .delete-uni
-                $('.delete-uni').on('click', function () {
-                    // Remove the parent .add-more-uni-row
-                    $(this).closest('.add-more-uni-row').remove();
-                });
-            });
-            // Attach click event to a common ancestor, in this case, document
-            $(document).on('click', '.delete-uni', function () {
-                // Remove the parent .add-more-uni-row
-                $(this).closest('.add-more-uni-row').remove();
-            });
-
-        </script>
 </body>
 
 </html>
