--- a/html/student-management.html
+++ b/html/student-management.html
@@ -33,18 +33,9 @@
     <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.13.6/datatables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-
-    <!-- Page CSS -->
-
-    <!-- Helpers -->
     <script src="../assets/vendor/js/helpers.js"></script>
-    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="../assets/js/config.js"></script>
 </head>
 
@@ -52,8 +43,6 @@
     <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
-            <!-- Menu -->
-
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
                     <a href="index.html" class="">
@@ -142,8 +131,6 @@
 
                 </ul>
             </aside>
-            <!-- / Menu -->
-
             <!-- Layout container -->
             <div class="layout-page">
                 <!-- Navbar -->
@@ -166,16 +153,7 @@
                             </div>
                         </div>
                         <!-- /Search -->
-
                         <ul class="navbar-nav flex-row align-items-center ms-auto">
-                            <!-- Place this tag where you want the button to render. -->
-                            <!-- <li class="nav-item lh-1 me-3">
-                <a class="github-button" href="https://github.com/themeselection/sneat-html-admin-template-free"
-                  data-icon="octicon-star" data-size="large" data-show-count="true"
-                  aria-label="Star themeselection/sneat-html-admin-template-free on GitHub">Star</a>
-              </li> -->
-
-                            <!-- User -->
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
                                     data-bs-toggle="dropdown">
@@ -236,21 +214,15 @@
                                     </li>
                                 </ul>
                             </li>
-                            <!--/ User -->
                         </ul>
                     </div>
                 </nav>
 
                 <!-- / Navbar -->
 
-                <!-- Content wrapper -->
                 <div class="content-wrapper px-lg-3 px-0">
-                    <!-- Content -->
-
 
                     <div class="container-xxl flex-grow-1 container-p-y">
-                        <!-- <h4 class="pt-3 pb-2">Student Management</h4> -->
-
                         <div class="tab mb-3">
                             <div class="tab-scroll">
                                 <button class="tablinks" data-tab="sm" id="defaultOpen">Student
@@ -267,8 +239,6 @@
                         </div>
 
                         <div id="sm" class="tabcontent">
-
-                            <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Student Management</h5>
                                 <div class="row ">
@@ -592,13 +562,9 @@
                                     </table>
                                 </div>
                             </div>
-                            <!--/ Striped Rows -->
-
                         </div>
 
                         <div id="Inquery" class="tabcontent">
-
-                            <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">InQuiry</h5>
                                 <div class="row ">
@@ -792,12 +758,9 @@
                                     </table>
                                 </div>
                             </div>
-                            <!--/ Striped Rows -->
-
                         </div>
 
                         <div id="in-progress" class="tabcontent">
-                            <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">In Progress</h5>
                                 <div class="row ">
@@ -1075,11 +1038,9 @@
                                     </table>
                                 </div>
                             </div>
-                            <!--/ Striped Rows -->
                         </div>
 
                         <div id="paid" class="tabcontent">
-                            <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Paid</h5>
                                 <div class="row ">
@@ -1265,11 +1226,9 @@
                                     </table>
                                 </div>
                             </div>
-                            <!--/ Striped Rows -->
                         </div>
 
                         <div id="cas" class="tabcontent">
-                            <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Cas/T20</h5>
                                 <div class="row ">
@@ -1454,12 +1413,9 @@
                                     </table>
                                 </div>
                             </div>
-                            <!--/ Striped Rows -->
-
                         </div>
 
                         <div id="visa" class="tabcontent">
-                            <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Visa</h5>
                                 <div class="row ">
@@ -1644,12 +1600,9 @@
                                     </table>
                                 </div>
                             </div>
-
-                            <!--/ Striped Rows -->
                         </div>
 
                         <div id="visa-accepted" class="tabcontent">
-                            <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Visa Accepted</h5>
                                 <div class="row ">
@@ -1834,11 +1787,9 @@
                                     </table>
                                 </div>
                             </div>
-                            <!--/ Striped Rows -->
                         </div>
 
                         <div id="close" class="tabcontent">
-                            <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
                                 <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Close</h5>
                                 <div class="row ">
@@ -2023,7 +1974,6 @@
                                     </table>
                                 </div>
                             </div>
-                            <!--/ Striped Rows -->
                         </div>
 
                         <!-- Footer -->
@@ -2047,7 +1997,6 @@
 
                         <div class="content-backdrop fade"></div>
                     </div>
-                    <!-- Content wrapper -->
                 </div>
                 <!-- / Layout page -->
             </div>
@@ -2056,6 +2005,7 @@
             <div class="layout-overlay layout-menu-toggle"></div>
         </div>
         <!-- / Layout wrapper -->
+
         <!--View Modal -->
         <div class="modal fade" id="view" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -2597,7 +2547,6 @@
             </div>
         </div>
 
-
         <!--view uni Modal -->
         <div class="modal fade" id="uni-view" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -3134,6 +3083,7 @@
                                 </div>
         </script>
 
+        <!--   add uni  template-->
         <script type="text/template" id="uni_template">
                                     <div class="row ">
                                                             <div class="col-lg-3 mb-3">
@@ -3158,7 +3108,7 @@
                                                         </div>
                                 </script>
 
-
+        <!-- add uni row in uni list -->
         <script type="text/template" id="uni_view">
                   <div class="add-more-uni-row position-relative mb-3">
                                                         <div class="delete-uni"><i class="bi bi-trash-fill text-danger"></i></div>
@@ -3383,6 +3333,8 @@
                                                     </div>
             </script>
 
+
+        <!-- add uni row in action -->
         <script type="text/template" id="action_view">
                 <div class="add-more-uni-row2 position-relative mb-3">
                                                       <div class="delete-uni2"><i class="bi bi-trash-fill text-danger"></i></div>
@@ -3606,6 +3558,7 @@
                                                       </div>
                                                   </div>
           </script>
+
         <!--view uni Modal -->
         <div class="modal fade" id="view-unit" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
