--- a/html/sale-invoice.html
+++ b/html/sale-invoice.html
@@ -209,8 +209,8 @@
                                     <!-- <li>
                     <div class="dropdown-divider"></div>
                   </li> -->
-                                    <li>
-                                        <a class="dropdown-item" href="javascript:void(0);">
+                                   <li>
+                                        <a class="dropdown-item" href="login.html">
                                             <i class="bx bx-power-off me-2"></i>
                                             <span class="align-middle">Log Out</span>
                                         </a>
