--- a/html/credit-invoice.html
+++ b/html/credit-invoice.html
@@ -165,6 +165,30 @@
       </a>
          
           </li>
+           <!-- registration -->
+           <li class="menu-item  ">
+            <a href="javascript:void(0)" class="menu-link menu-toggle">
+              <i class="menu-icon tf-icons bx bx-copy"></i>
+              <div data-i18n="Extended UI">Incoming Booking</div>
+            </a>
+            <ul class="menu-sub">
+              <li class="menu-item ">
+                <a href="all-booking.html" class="menu-link">
+                  <div data-i18n="Perfect Scrollbar">All Booking</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="ongoing-booking.html" class="menu-link">
+                  <div data-i18n="Text Divider">Ongoing Booking</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="completed-booking.html" class="menu-link">
+                  <div data-i18n="Text Divider">Service Completed</div>
+                </a>
+              </li>
+            </ul>
+          </li>
         </ul>
       </aside>
       <!-- / Menu -->
